--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,107 +1,216 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  p {
-    font-size: 1.1rem;
-  }
-  
-  nav {
-    display: flex;
-    padding: 2rem 0;
-    background: #111;
-  }
-  
-  nav section {
-    width: 100%;
-  }
-  
-  nav a {
-    font-weight: 700;
-    padding: 1rem 1.5rem;
-    border-radius: 4px;
-  }
-  
-  nav a:first-of-type {
-    margin-left: -1.5rem;
-  }
-  
-  nav a:hover {
-    background: #222;
-  }
-  
-  a {
-    color: #ea3546;
-    text-decoration: none;
-  }
-  
-  section {
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 1.5rem;
-  }
-  
-  section h1 {
-    font-size: 3rem;
-  }
-  
-  input, select, textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-  textarea {
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    resize: none;
-  }
+p {
+  font-size: 1.1rem;
+}
 
-  .question h2 {
-    font-size: 2.5rem;
-  }
-  
-  .question-excerpt {
-    padding: 1.5rem 0;
-    border-bottom: 1px solid #eee;
-  }
-  
-  .question-excerpt:first-of-type {
-    padding-top: 0;
-  }
-  
-  .question-excerpt h2 {
-    margin-top: 0;
-    font-size: 1.5rem;
-  }
-  
-  .answer {
-    background: #f0f0f0;
-    border-radius: 4px;
-    padding: 1rem 1.5rem;
-    margin: 1rem 0;
-  }
-  
-  .button {
-    display: inline-block;
-    background: #ea3546;
-    color: white;
-    border-radius: 4px;
-    font-weight: 700;
-    padding: 0.75rem 1.5rem;
-  }
+nav {
+  display: flex;
+  padding: 2rem 0;
+  background: #111;
+}
 
-  .right {
-    float: right;
-  }
-  
+nav section {
+  width: 100%;
+}
+
+nav a {
+  font-weight: 700;
+  padding: 1rem 1.5rem;
+  border-radius: 4px;
+}
+
+nav a:first-of-type {
+  margin-left: -1.5rem;
+}
+
+nav a:hover {
+  background: #222;
+}
+
+a {
+  color: #ea3546;
+  text-decoration: none;
+}
+
+section {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 1.5rem;
+}
+
+section h1 {
+  font-size: 3rem;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
+.question h2 {
+  font-size: 2.5rem;
+}
+
+.question-excerpt {
+  padding: 1.5rem 0;
+  border-bottom: 1px solid #eee;
+}
+
+.question-excerpt:first-of-type {
+  padding-top: 0;
+}
+
+.question-excerpt h2 {
+  margin-top: 0;
+  font-size: 1.5rem;
+}
+
+.answer {
+  background: #f0f0f0;
+  border-radius: 4px;
+  padding: 1rem 1.5rem;
+  margin: 1rem 0;
+}
+
+.button {
+  display: inline-block;
+  background: #ea3546;
+  color: white;
+  border-radius: 4px;
+  font-weight: 700;
+  padding: 0.75rem 1.5rem;
+}
+
+.w-25 {
+  width: 25%;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.right {
+  float: right;
+}
+
+.mt-2 {
+  margin-top: 8px;
+}
+
+.mt-3 {
+  margin-top: 12px;
+}
+
+.ms-3 {
+  margin-left: 12px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-end {
+  justify-content: end;
+}
+
+.RichEditor-root {
+  background: #fff;
+  border: 1px solid #ddd;
+  font-family: "Georgia", serif;
+  font-size: 14px;
+  padding: 15px;
+}
+
+.RichEditor-editor {
+  border-top: 1px solid #ddd;
+  cursor: text;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.RichEditor-editor .public-DraftEditorPlaceholder-root,
+.RichEditor-editor .public-DraftEditor-content {
+  margin: 0 -15px -15px;
+  padding: 15px;
+}
+
+.RichEditor-editor .public-DraftEditor-content {
+  min-height: 100px;
+}
+
+.RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
+  display: none;
+}
+
+.RichEditor-editor .RichEditor-blockquote {
+  border-left: 5px solid #eee;
+  color: #666;
+  font-family: "Hoefler Text", "Georgia", serif;
+  font-style: italic;
+  margin: 16px 0;
+  padding: 10px 20px;
+}
+
+.RichEditor-editor .public-DraftStyleDefault-pre {
+  background-color: rgba(0, 0, 0, 0.05);
+  font-family: "Inconsolata", "Menlo", "Consolas", monospace;
+  font-size: 16px;
+  padding: 20px;
+}
+
+.RichEditor-controls {
+  font-family: "Helvetica", sans-serif;
+  font-size: 14px;
+  margin-bottom: 5px;
+  user-select: none;
+}
+
+.RichEditor-styleButton {
+  color: #999;
+  cursor: pointer;
+  margin-right: 16px;
+  padding: 2px 0;
+  display: inline-block;
+}
+
+.RichEditor-activeButton {
+  color: #5890ff;
+}
