--- a/web/src/index.css
+++ b/web/src/index.css
@@ -159,6 +159,22 @@ textarea {
   padding: 15px;
 }
 
+#root {
+  height: 100vh;
+}
+
+.max-height-header {
+  max-height: 100px;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-8 {
+  flex: 8;
+}
+
 .RichEditor-editor {
   border-top: 1px solid #ddd;
   cursor: text;
